syntax = "proto3";
package test;

option go_package = "testdata;test";

enum Status {
  Status_Default = 0;
  Status_Success = 1;
  Status_Failure = 2;
}

message Outer {
  string outer_string = 1;
  Inner inner = 2;
  Status status = 3;
}

message Inner {
  string inner_string = 1;
  int32 inner_int = 2;
  bool inner_bool = 3;
  repeated float inner_repeated_float = 4;
}

message BigInt {
  uint64 bigint_uint64 = 1;
  int64 bigint_int64 = 2;
  sint64 bigint_sint64 = 3;
  fixed64 bigint_fixed64 = 4;
  sfixed64 bigint_sfixed64 = 5;
}